envs/dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: jupyterhub
