envs/dev/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
spec:
  rules:
    - host: jupyterhub.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyterhub-service
                port:
                  number: 80
